completed hot deal part

--- a/index.html
+++ b/index.html
@@ -95,6 +95,19 @@
             </div>
         </div>
 
+        <!-- hot deal part -->
+        <div class="hot-deal">
+            <div class="hot-deal-item">
+                <h1 class="hot-deal-title">Hot Deal ! Sale Up To 25% Off</h1>
+                <p class="hot-deal-description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+
+            </div>
+            <div class="hot-deal-img">
+                <img src="./images/pngwing 8.png" alt="" class="hot-deal-img-1">
+
+            </div>
+        </div>
+
 
     </main>
 
