my final commit for the assignment

--- a/index.html
+++ b/index.html
@@ -31,11 +31,34 @@
 
             </div>
         </div>
+
+              <!-- recomended flowers for your home -->
+
+              <div class="recommended-flowers">
+
+                <h3 class="recommended-flowers-title">Some Recommended flowers for home decoration</h3>
+                <div class="recommended-flowers-image">
+                    <img src="./images/blue-flower.jpg" alt="" class="recommended-flowers-image-1">
+                    <img src="./images/red.jpg" alt="" class="recommended-flowers-image-1">
+                    <img src="./images/sun-flower.jpeg" alt="" class="recommended-flowers-image-1">
+
+                </div>
+
+
+
+              </div>
+              
+
+
+
+
          <!-- feature related styles -->
         <div class="featured">
             <h2 class="featured-title">Our Featured Flowers</h2>
             <p class="featured-description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
         </div>
+
+
 
         <!-- flower category -->
         <div class="flower-category">
@@ -148,6 +171,15 @@
     </main>
 
     <footer>
+
+        <div class="flower-shop-footer">
+            <div class="footer-items">
+                <h2 class="footer-shop-title"><span class="text-color">Flower</span>Shop</h2>
+                <p class="footer-shop-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
+            </div>
+            
+        </div>
 
     </footer>
 
