--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 
 
             </div>
-            <div class="banner-img">
-                <img src="./images/pngwing 10.png" alt="" class="img-1">
+            <!-- <div class="banner-img"> -->
+         <img  src="./images/pngwing 10.png" alt="" class="img-1">
 
-            </div>
+            <!-- </div> -->
         </div>
 
               <!-- recomended flowers for your home -->
 
               <div class="recommended-flowers">
 
-                <h3 class="recommended-flowers-title">Some Recommended flowers for home decoration</h3>
+                <h3 class="recommended-flowers-title">Recommended flowers for home decoration</h3>
                 <div class="recommended-flowers-image">
                     <img src="./images/blue-flower.jpg" alt="" class="recommended-flowers-image-1">
                     <img src="./images/red.jpg" alt="" class="recommended-flowers-image-1">
